# emis_2016

./: .gitignore  Doxyfile_diete  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  compila.sh  config.status  configure  configure.ac  corre.sh  emis_2016.sh  emis_2019.sh  functions.sh  namelist_emis.nml  sum_emisPM25.sh  suma_Apm25.awk  suma_Apm25p.awk  suma_Apm25s.awk  suma_I.awk  suma_emis.sh  suma_emisI.sh
01_datos/: NOTAS.docx
01_datos/bajio/: CARRETERAS.csv  VIALIDADES.csv  aeropuerto.csv  agricola.csv  bosque.csv  centrales.csv  ffcc.csv  gri_pav.csv  gri_pob.csv  gri_ter.csv  localiza.csv
01_datos/bajio3/: CARRETERAS.csv  VIALIDADES.csv  agricola.csv  bosque.csv  gri_pav.csv  gri_pob.csv  gri_ter.csv  localiza.csv
01_datos/cdjuarez/: CARRETERAS.csv  VIALIDADES.csv  aeropuerto.csv  agricola.csv  bosque.csv  centrales.csv  ffcc.csv  gri_pav.csv  gri_pob.csv  gri_ter.csv  localiza.csv
01_datos/centro/: CARRETERAS.csv  Pob_rural.csv  Pob_urbana.csv  VIALIDADES.csv  aeropuerto.csv  agricola.csv  bosque.csv  centrales.csv  ffcc.csv  gri_pav.csv  gri_pob.csv  gri_ter.csv  puertos.csv
01_datos/chem/: namelist.cbm05  namelist.ghg  namelist.mozart  namelist.racm  namelist.racm_2  namelist.radm  namelist.radm_1  namelist.radm_2  namelist.radm_ale  namelist.saprc  namelist.saprc7  pm25_profiles.csv  profile_cbm04.csv  profile_cbm05.csv  profile_ghg.csv  profile_mozart.csv  profile_racm2.csv  profile_radm2.csv  profile_saprc07.csv  profile_saprc99.csv  scc-profile_pm25.csv  scc-profiles.txt  scc-profiles.txt_e10  scc-profiles.txt_mtbe  scc-profiles.txt_org
01_datos/colima/: CARRETERAS.csv  VIALIDADES.csv  aeropuerto.csv  agricola.csv  bosque.csv  centrales.csv  ffcc.csv  gri_pav.csv  gri_pob.csv  gri_ter.csv  localiza.csv  puertos.csv
01_datos/ecacor/: CARRETERAS.csv  VIALIDADES.csv  aeropuerto.csv  agricola.csv  bosque.csv  centrales.csv  gri_pav.csv  gri_pob.csv  gri_ter.csv  localiza.csv
01_datos/ecaim/: CARRETERAS.csv  DensidadHorariaGeneral.csv  VIALIDADES.csv  aeropuerto.csv  agricola.csv  bosque.csv  centrales.csv  ffcc.csv  gri_pav.csv  gri_pob.csv  gri_ter.csv
01_datos/ecaim3/: CARRETERAS.csv  VIALIDADES.csv  aeropuerto.csv  agricola.csv  (+8 more)
02_aemis/: IBC__2014.csv  IBC__2016.csv  ICO2_2014.csv  ICO__2014.csv  ICO__2016.csv  INH3_2014.csv  INH3_2016.csv  INOx_2014.csv  INOx_2016.csv  IPM10_2014.csv  IPM10_2016.csv  IPM25_2014.csv  IPM25_2016.csv  ISO2_2014.csv  ISO2_2016.csv  IVOC_2014.csv  IVOC_2016.csv  Makefile  Makefile.am  Makefile.in  aeropuerto.csv  agricola.csv  area_espacial.F90  area_espacial.f90  bosque.csv  centrales.csv  ffcc.csv  gri_pav.csv  gri_pob.csv  gri_ter.csv  imet__2014.csv  imet__2016.csv  puertos.csv
03_movilspatial/: CARRETERAS.csv  Makefile  Makefile.am  Makefile.in  VIALIDADES.csv  agrega.f90  suma_carretera.F90  suma_vialidades.F90
04_temis/: ACH4_2016.csv  ACN__2016.csv  ACO2_2016.csv  ACO__2016.csv  ANH3_2016.csv  ANOx_2016.csv  APM10_2016.csv  APM25_2016.csv  ASO2_2016.csv  AVOC_2016.csv  Makefile  Makefile.am  Makefile.in  anio2005.csv  anio2008.csv  anio2015.csv  anio2016.csv  anio2017.csv  atemporal.F90  atemporal.f90  fecha.txt  temporal_01.txt
05_semisM/: Makefile  Makefile.am  Makefile.in  emiss_2015.csv  fracc_2008.csv  movil_spatial.F90  movil_spatial.f90
06_temisM/: Makefile  Makefile.am  Makefile.in  movil_temp.F90  movil_temp.f90
07_puntual/: Makefile  Makefile.am  Makefile.in  anio2016.csv  puntual.csv  t_puntal.F90  t_puntal.f90
08_spec/: Makefile  Makefile.am  Makefile.in  agg_a.F90  agg_a.f90  agg_m.F90  agg_m.f90  agg_mod.F90  agg_p.F90  agg_p.f90  profile_cbm04.csv  profile_mozart.csv  profile_saprc07.csv  profile_saprc99.csv  scc-profiles.txt
09_pm25spec/: Makefile  Makefile.am  Makefile.in  TAPM2_2016.csv  e_pm25_mod.F90  pm25_speci_a.F90  pm25_speci_a.f90  pm25_speci_m.F90  pm25_speci_m.f90  pm25_speci_p.F90  scc-profile_pm25.csv
10_storage/: Makefile  Makefile.am  Makefile.in  SAPRC99_NROG_A.txt  SAPRC99_NROG_M.txt  SAPRC99_NROG_P.txt  SAPRC99_NVOL_A.txt  SAPRC99_NVOL_M.txt  SAPRC99_NVOL_P.txt  TACH4_2016.csv  TACN__2016.csv  TANOx_2016.csv  TASO2_2016.csv  TAVOC_2016.csv  TMCN__2016.csv  TMCO2_2016.csv  TMCO__2016.csv  TMNH3_2016.csv  TMPM2_2016.csv  g_2016_racm.f90  g_cbm5_2016.f90  g_emis2.F90  g_emiss.F90  g_mozart_2016.f90  g_radm_2016.f90  g_radm_2016nh.f90  g_radm_2019.f90  g_saprc_2016.f90  localiza.csv  namelist.cbm05  namelist.racm  namelist.radm  namelist.saprc7  sal.txt
12_cmaq/: TACO2_2016.csv  TACO__2016.csv  TANH3_2016.csv  TAPM102016.csv  TMCH4_2016.csv  TMCOV_2016.csv  TMNO2_2016.csv  TMNO__2016.csv  TMPM102016.csv  TMSO2_2016.csv  g_cbm5_cmaq.f90
Sources/: Makefile.am  Makefile.in  agg_a.F90  agg_m.F90  agg_mod.F90  agg_p.F90  agrega.F90  area_espacial.F90  areaanual.F90  atemporal.F90  check.F90  e_pm25_mod.F90  f_anual.F90  g_emis2.F90  g_saprc_chimere.F90  master_mod.F90  mobile_mod.F90  movil_anual.F90  movil_spatial.F90  movil_temp.F90  pm25_speci_a.F90  pm25_speci_m.F90  pm25_speci_p.F90  sort_uniq.F90  suma_carretera.F90  suma_vialidades.F90  t_puntal.F90
Sources/testsuite/: Makefile.am  Makefile.in  aclocal.m4  atconfig  namelist_emis.nml  package.m4  t_check.F90  t_count.F90  t_get_position.F90  t_kverano.F90  t_leenm.F90  t_unique.F90  test1  test2  test3  test4  testsuite  testsuite.at
autoconf/: ax_f08_newunit.m4  ax_lib_netcdf4.m4  test-driver
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
escenario/: modifica.sh  municipio.txt
tmpmexico/: emis  mexico  namelist_emis.nml
tmpmexico9/: mexico9  namelist_emis.nml
tmpmonterrey3/: monterrey3  namelist_emis.nml
tmptijuana/: ACH4_2016.csv  ACN__2016.csv  ACO2_2016.csv  ACO__2016.csv  ANH3_2016.csv  ANOx_2016.csv  APM10_2016.csv  APM25_2016.csv  ASO2_2016.csv  AVOC_2016.csv  M_CH4.csv  M_CN.csv  M_CO.csv  M_CO2.csv  M_NH3.csv  M_NO.csv  M_NO2.csv  M_PM10.csv  M_PM25.csv  M_SO2.csv  M_VOC.csv  chem  gri_movil.csv  namelist_emis.nml  tijuana  time
util/: especiacion.sh  sum_emisPM25.sh  suma_A.awk  suma_emis.sh  suma_emisI.sh  suma_nc.sh  suma_sal.awk  suma_spc.awk
(+547 files in other folders)
