#
# This file is processed by automake (produces file Makefile.in)
#
bin_PROGRAMS = carr.exe vial.exe agrega.exe

# Additional files to be cleaned with 'make clean'
CLEANFILES = *.o *.mod *~

carr_exe_SOURCES = suma_carretera.F90
vial_exe_SOURCES = suma_vialidades.F90
agrega_exe_SOURCES = agrega.f90

